# itmo

bachelor-thesis/: .gitignore  Dockerfile  bachelor-thesis.tex  build.sh  entrypoint.sh  itmo-student-thesis.cls
sem-1/algorithms-and-data-structures/labs/lab-2/A/: A.go
sem-1/algorithms-and-data-structures/labs/lab-2/D/: D.go
sem-1/algorithms-and-data-structures/labs/lab-2/E/: E.cpp
sem-1/algorithms-and-data-structures/labs/lab-3/A/: A.go
sem-1/algorithms-and-data-structures/labs/lab-3/C/: C.go
sem-1/algorithms-and-data-structures/labs/lab-3/D/: D.go
sem-1/algorithms-and-data-structures/labs/lab-4/A/: A.go
sem-1/algorithms-and-data-structures/labs/lab-4/B/: B.go
sem-1/algorithms-and-data-structures/labs/lab-4/E/: E.go
sem-1/computer-architecture/: README.ru.md
sem-1/computer-architecture/homeworks/hwk-2/: README.md
sem-1/computer-architecture/homeworks/hwk-4/: README.md
sem-1/computer-architecture/labs/lab-1/: README.md
sem-1/computer-architecture/labs/lab-3/: README.md
sem-1/computer-architecture/labs/lab-4/: README.md
sem-1/computer-architecture/labs/lab-7/: README.md
sem-1/digital-culture/labs/lab-2/: get_message.py  shannon_fano.py
sem-1/digital-culture/labs/lab-4/: dict1.txt
sem-1/digital-culture/labs/lab-5/: lab5_mikheev_m3101.py
sem-1/intro-to-programming-in-java/homeworks/hwk-4/: README.md
sem-1/linear-algebra/labs/lab-2/: solution.py
sem-1/programming-in-c/labs/lab-1/: solution.c
sem-1/programming-in-c/labs/lab-11/: pentagon.c
sem-1/programming-in-c/labs/lab-2/: solution.c
sem-1/programming-in-c/labs/lab-4/: solution.c
sem-1/programming-in-c/labs/lab-6/: solution.c
sem-1/programming-in-c/labs/lab-9/: solution.c
sem-2/: README.md  README.ru.md
sem-2/programming-in-cpp/homeworks/hwk-1/: CMakeLists.txt  README.md
sem-2/programming-in-cpp/homeworks/hwk-1/include/: pi.h  random_gen.h
sem-2/programming-in-cpp/homeworks/hwk-1/src/: main.cpp  pi.cpp  random_gen.cpp
sem-2/programming-in-cpp/homeworks/hwk-2/: CMakeLists.txt  README.md
sem-2/programming-in-cpp/homeworks/hwk-2/src/: calc.cpp  main.cpp
sem-2/programming-in-cpp/homeworks/hwk-3/: CMakeLists.txt  README.md
sem-2/programming-in-cpp/homeworks/hwk-4/: CMakeLists.txt  README.md
sem-2/programming-in-cpp/homeworks/hwk-4/include/: cache.h  pool.h
sem-2/programming-in-cpp/homeworks/hwk-4/src/: pool.cpp
sem1/: README.md  README.ru.md
sem1/computer-architecture/: README.ru.md
sem1/computer-architecture/homeworks/hwk-1/: README.md
sem1/computer-architecture/homeworks/hwk-3/: README.md
sem1/computer-architecture/labs/lab-2/: README.md
sem1/computer-architecture/labs/lab-5/: README.md
sem1/computer-architecture/labs/lab-6/: README.md
sem1/computer-architecture/labs/lab-8/: README.md
sem1/digital-culture/lab-4/: README.md  brain042.txt  process_text.py
sem1/digital-culture/lab-4/text_utils/: text_preprocessing.py  word_edit_distance.py
sem1/digital-culture/lab-5/: graphedges17.txt  graphtask17.txt
sem1/digital-culture/labs/lab-2/: basic_analysis.py  huffman.py
sem1/intro-to-programming-in-java/homeworks/hwk-10/: README.md
sem1/intro-to-programming-in-java/homeworks/hwk-2/: README.md
sem1/intro-to-programming-in-java/homeworks/hwk-3/: README.md
sem1/intro-to-programming-in-java/homeworks/hwk-5/: README.md
sem1/intro-to-programming-in-java/homeworks/hwk-6/: README.md
sem1/intro-to-programming-in-java/homeworks/hwk-7/: README.md
sem1/intro-to-programming-in-java/homeworks/hwk-8/: README.md
sem1/intro-to-programming-in-java/homeworks/hwk-9/: README.md
sem1/linear-algebra/labs/lab-1/: solution.py
sem1/linear-algebra/labs/lab-3/: solution.py
sem1/programming-in-c/labs/lab-10/: solution.c
sem1/programming-in-c/labs/lab-11/: pentagon.h  solution.c
sem1/programming-in-c/labs/lab-12/: solution.c
sem1/programming-in-c/labs/lab-13/: id3v2-spec.md
sem1/programming-in-c/labs/lab-3/: statement.c
sem1/programming-in-c/labs/lab-5/: solution.c
sem1/programming-in-c/labs/lab-7/: solution.c
sem1/programming-in-c/labs/lab-8/: solution.c
sem3/algos-and-ds/: README.md
sem3/algos-and-ds/labs/: .gitignore
sem3/algos-and-ds/labs/lab-1/: CMakeLists.txt  README.md
sem3/algos-and-ds/labs/lab-2/: CMakeLists.txt  README.md
sem3/algos-and-ds/labs/lab-2/src/: a.cpp  b.cpp  c.cpp  d.cpp  e.cpp  f.cpp  h.cpp  i.cpp
sem3/algos-and-ds/labs/lab-3/: CMakeLists.txt  README.md
sem3/algos-and-ds/labs/lab-3/src/: a.cpp  b.cpp  c.cpp  d.cpp  e.cpp  f.cpp  g.cpp  h.cpp  i.cpp  j.cpp  k.cpp  l.cpp  m.cpp
sem3/discrete-maths/: README.md
sem3/discrete-maths/labs/lab-1/: CMakeLists.txt  README.md
sem3/discrete-maths/labs/lab-1/src/: a.cpp  c.cpp  d.cpp  e.cpp  f.cpp  g.cpp  h.cpp
sem3/discrete-maths/labs/lab-2/: CMakeLists.txt  README.md
sem4/discrete-maths/labs/lab-2/: package.json  tester.py  tsconfig.json
sem5/tm/labs/lab-2/: README.md  draw.py  go.mod  main.go
sem5/tm/labs/lab-3/: Makefile  PrExpr.g4  README.md  go.mod  go.sum  main.go  main_test.go
sem5/tm/labs/lab-4/: Makefile  go.mod  go.sum  main.go
year2/differential-equations/: README.md
year2/discrete-maths/labs/lab-2/: README.md
year2/web-development/: README.md
year2/web-development/homeworks/hwk-10/: README.md
year2/web-development/homeworks/hwk-11/: README.md
year2/web-development/homeworks/hwk-4/: README.md  pom.xml
year2/web-development/homeworks/hwk-5/: README.md  pom.xml
year2/web-development/homeworks/hwk-6/: README.md  pom.xml
year2/web-development/homeworks/hwk-7/: README.md  pom.xml  profile.properties
year2/web-development/homeworks/hwk-8/: README.md  pom.xml
year2/web-development/homeworks/hwk-9/: README.md
year2/web-development/lectures/: README.md
year2/web/homeworks/: .gitignore  README.md
year2/web/homeworks/hwk-10/: package-lock.json
year2/web/homeworks/hwk-11/: README.md
year2/web/homeworks/hwk-3/: pom.xml
year2/web/homeworks/hwk-4/: README.md
year2/web/homeworks/hwk-5/: README.md
year2/web/homeworks/hwk-6/: README.md
year2/web/homeworks/hwk-8/: README.md
year2/web/homeworks/hwk-9/: pom.xml
(+349 files in other folders)
