cmake_minimum_required(VERSION 3.0.0)
project(lab-2 VERSION 0.1.0)

set(CMAKE_CXX_STANDARD 20)

add_executable(task-a src/a.cpp)
add_executable(task-b src/b.cpp)
add_executable(task-c src/c.cpp)
add_executable(task-d src/d.cpp)
add_executable(task-d-test src/d-test.cpp)
add_executable(task-e src/e.cpp)
add_executable(task-f src/f.cpp)
add_executable(task-g src/g.cpp)
add_executable(task-g1 src/g1.cpp)
add_executable(task-j src/j.cpp)
add_executable(task-l src/l.cpp)
add_executable(task-k src/k.cpp)
add_executable(task-m src/m.cpp)
add_executable(tests src/tests.cpp)